@@ -2,6 +2,7 @@
   fix mom_sync_job code that crashes pbs_server (USC)
   checking disk space in $PBS_SERVER_HOME was mistakenly disabled (USC)
   node's np now accessible in qmgr (USC)
+  add ":ALL" as a special node selection when stat'ing nodes (USC)
 
 2.1.0p0
 
